--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
         style="display: flex; justify-content: center; flex-wrap: wrap"
         class="mt-5"
       >
-        <img
-          class="profile"
-          src="https://github.com/usama-sattar/portfolio.io/blob/master/assets/profile.JPG"
-        />
+        <img class="profile" src="assets/profile.jpg" />
         <div class="email-text ml-5">
           <h1 class="mail">iamusamasattar@gmail.com</h1>
           <br />
